--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 								<div class="content color0 span-3-75">
 									<h1 class="major">Hello, my name<br />
 									is Dindi</h1>
-									<p>This is <strong>Dindi</strong>! [GAME DESIGN/ Pixel Art/ Music Production] You can also find me at <a href="https://dindi.itch.io">itch.io</a> :)</p>
+									<p>This is <strong>Dindi</strong>! [GAME DESIGN/ Pixel Art/ Music Production] You can also find me at <a href="https://dindizero.itch.io">itch.io</a> :)</p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
