--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 								<div class="content color0 span-3-75">
 									<h1 class="major">Hello, my name<br />
 									is Dindi</h1>
-									<p>This is <strong>Dindi</strong>! [GAME DESIGN/ Pixel Art/ Music Production] You can also find me at <a href="https://dindizero.itch.io">itch.io</a> :)</p>
+									<p>This is <strong>Dindi</strong>! [Game Design/ Pixel Art/ Music Production] You can also find me at <a href="https://dindizero.itch.io">itch.io</a> :)</p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
@@ -36,8 +36,8 @@
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
-									<h2 class="major">Sed etiam aenean</h2>
-									<p>Mauris et ligula arcu. Proin dapibus convallis accumsan. Lorem maximus hendrerit orci, sit amet elementum massa hendrerit sed. Donec et ullamcorper ligula. Suspendisse amet potenti. Ut pretium libero eleifend euismod sed tristique. Quisque dictum magna risus, id ultricies justo sagittis vitae. Sed id odio tempor, porttitor elit amet, gravida hendrerit fringilla lorem ipsum dolor.</p>
+									<h2 class="major">Do You Want To Change</h2>
+									<p>This is a game I made when I first took part in an online GameJam on itch.io. It is a short story about my own experience. All of the assets and music are made by myself. Welcome to play this game: <a href="https://dindizero.itch.io/do-you-want-to-change">[Do You Want To Change]</a>.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/pic02.jpg" alt="" />
